examples/snapshots/overloading__compiler_examples@sec-2-3.snap
---
source: src/main.rs
expression: output
input_file: examples/sec-2-3.over
---
{
  "status": "success",
  "expression": "assume addInt: (Int, Int) => Int\nassume addString: (String, String) => String\nλ x => let add_a = a‹addInt, addString›\nlet fst = add_a(x, 2)\nlet add_b = b‹addInt, addString›\nlet snd = add_b(fst, \"3\")\nsnd => \n  let add_a = a‹addInt, addString›\n  let fst = add_a(x, 2)\n  let add_b = b‹addInt, addString›\n  let snd = add_b(fst, \"3\")\n  snd",
  "dimension_spans": "[spans]",
  "inferred_type": "(x_0) => app_4",
  "worlds": {
    "type": "no"
  },
  "constraints": [
    {
      "from": "(Int, Int) => Int",
      "choices": [
        "a₁"
      ],
      "to": "over_a_1"
    },
    {
      "from": "(String, String) => String",
      "choices": [
        "a₂"
      ],
      "to": "over_a_1"
    },
    {
      "from": "over_a_1",
      "choices": [],
      "to": "(x_0, Int) => app_2"
    },
    {
      "from": "(Int, Int) => Int",
      "choices": [
        "b₁"
      ],
      "to": "over_b_3"
    },
    {
      "from": "(String, String) => String",
      "choices": [
        "b₂"
      ],
      "to": "over_b_3"
    },
    {
      "from": "over_b_3",
      "choices": [],
      "to": "(app_2, String) => app_4"
    }
  ],
  "bounds": [
    {
      "variable": "app_2",
      "lower": [
        {
          "type_name": "Int",
          "choices": [
            "a₁"
          ]
        },
        {
          "type_name": "String",
          "choices": [
            "a₂"
          ]
        }
      ],
      "upper": [
        {
          "type_name": "Int",
          "choices": [
            "b₁"
          ]
        },
        {
          "type_name": "String",
          "choices": [
            "b₂"
          ]
        }
      ]
    },
    {
      "variable": "app_4",
      "lower": [
        {
          "type_name": "Int",
          "choices": [
            "b₁"
          ]
        },
        {
          "type_name": "String",
          "choices": [
            "b₂"
          ]
        }
      ],
      "upper": []
    },
    {
      "variable": "over_a_1",
      "lower": [
        {
          "type_name": "(Int, Int) => Int",
          "choices": [
            "a₁"
          ]
        },
        {
          "type_name": "(String, String) => String",
          "choices": [
            "a₂"
          ]
        }
      ],
      "upper": [
        {
          "type_name": "(x_0, Int) => app_2",
          "choices": []
        }
      ]
    },
    {
      "variable": "over_b_3",
      "lower": [
        {
          "type_name": "(Int, Int) => Int",
          "choices": [
            "b₁"
          ]
        },
        {
          "type_name": "(String, String) => String",
          "choices": [
            "b₂"
          ]
        }
      ],
      "upper": [
        {
          "type_name": "(app_2, String) => app_4",
          "choices": []
        }
      ]
    },
    {
      "variable": "x_0",
      "lower": [],
      "upper": [
        {
          "type_name": "Int",
          "choices": [
            "a₁"
          ]
        },
        {
          "type_name": "String",
          "choices": [
            "a₂"
          ]
        }
      ]
    }
  ],
  "errors": [
    {
      "constraint": {
        "from": "Int",
        "choices": [
          "a₁",
          "b₂"
        ],
        "to": "String"
      },
      "message": "Incompatible base types"
    },
    {
      "constraint": {
        "from": "Int",
        "choices": [
          "a₂"
        ],
        "to": "String"
      },
      "message": "Incompatible base types"
    },
    {
      "constraint": {
        "from": "String",
        "choices": [
          "a₂",
          "b₁"
        ],
        "to": "Int"
      },
      "message": "Incompatible base types"
    },
    {
      "constraint": {
        "from": "String",
        "choices": [
          "b₁"
        ],
        "to": "Int"
      },
      "message": "Incompatible base types"
    }
  ]
}
